avoid passing java.endorsed.dirs for JRE >=9
* use existense of JRE_HOME/bin/jshell as the proxy for java9 detection
as per https://git.eclipse.org/r/#/c/105865/
* avoid setting JAVA_ENDORSED_DIRS unconditionally